<resources>
    <string name="appkefu_titlebar_backbtn_title">返回</string>
    <string name="appkefu_titlebar_leavebtn_title">暂时离开</string>
    <string name="appkefu_titlebar_closebtn_title">结束会话</string>
    <string name="appkefu_titlebar_title_text">咨询客服</string>
    <string name="appkefu_titlebar_rate_title">满意度评价</string>
    <string name="appkefu_titlebar_center_title">客服中心</string>
    <string name="appkefu_pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="appkefu_pull_to_refresh_refreshing_label">加载中...</string>
    <string name="appkefu_pull_to_refresh_release_label">松开可以刷新</string>
    <string name="appkefu_pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="appkefu_pull_to_refresh_update">最近更新:</string>
    <string name="appkefu_rate_backkey_down">请对客服做出评价,谢谢</string>
    <string name="appkefu_rate_reason">请填写评分低的原因</string>
    <string name="appkefu_rate_tip">请对我们的服务做出评价</string>
    <string name="appkefu_pull_to_refresh_from_bottom_pull_label">上滑可以刷新</string>
    <string name="appkefu_pull_to_refresh_from_bottom_release_label">@string/appkefu_pull_to_refresh_release_label</string>
    <string name="appkefu_pull_to_refresh_from_bottom_refreshing_label">@string/appkefu_pull_to_refresh_refreshing_label</string>
    <string name="appkefu_imageview_content_description">图片</string>
    <string name="appkefu_picture">图片</string>
    <string name="appkefu_choose_picture_error">选择图片文件出错</string>
    <string name="appkefu_voice">语音</string>
    <string name="appkefu_location">位置</string>
    <string name="appkefu_pick_picture_label">照片</string>
    <string name="appkefu_take_picture_label">拍照</string>
    <string name="appkefu_rate_label">满意度</string>
    <string name="appkefu_inputbar_send">发送</string>
    <string name="appkefu_press_to_speak">按住 说话</string>
    <string name="appkefu_lose_to_cancel">松开 取消</string>
    <string name="appkefu_record_voice_hint_record">手指上滑,取消发送</string>
    <string name="appkefu_record_voice_hint_cancel">松开手指,取消发送</string>
    <string name="appkefu_record_voice_too_short">录音时间太短</string>
    <string name="appkefu_record_voice_too_long">录音时间太长</string>
    <string name="appkefu_notification_record_stopped">录音停止</string>
    <string name="appkefu_notification_record_warning">录音警告</string>
    <string name="appkefu_record_voice_insert_sdcard">请插入SDCard</string>
    <string name="appkefu_record_voice_no_sdcard_exist">内存卡不存在</string>
    <string name="appkefu_record_voice_sdcard_full">SDCard已满,无法完成录音,请清理SDCard</string>
    <string name="appkefu_notification_send_picture">发送图片</string>
    <string name="appkefu_notification_sending_picture">正在发送图片</string>
    <string name="appkefu_notification_send_picture_succeed">发送图片成功</string>
    <string name="appkefu_notification_send_picture_failed">发送图片失败</string>
    <string name="appkefu_notification_send_voice">发送语音</string>
    <string name="appkefu_notification_sending_voice">正在发送语音</string>
    <string name="appkefu_notification_send_voice_succeed">发送语音成功</string>
    <string name="appkefu_notification_send_voice_failed">发送语音失败</string>
    <string name="appkefu_notification_ticker">您收到一条新消息</string>
    <string name="appkefu_notification_contentview_content">您收到一条新消息</string>
    <string name="appkefu_minuites_ago">分钟前</string>
    <string name="appkefu_hours_ago">小时前</string>
    <string name="appkefu_yestoday">昨天</string>
    <string name="appkefu_the_day_before_yestoday">前天</string>
    <string name="appkefu_days_ago">天前</string>
    <string name="appkefu_please_choose_action">请选择操作</string>
    <string name="appkefu_copy">复制内容</string>
    <string name="appkefu_delete">删除内容</string>
    <string name="appkefu_cancel">取消</string>
    <string name="appkefu_offline_send_again_later">当前离线,请稍后重试</string>
    <string name="appkefu_comment_title">调查</string>
    <string name="appkefu_comment_description">请为此客服打分</string>
    <string name="appkefu_comment_good">满意</string>
    <string name="appkefu_comment_ok">一般</string>
    <string name="appkefu_comment_bad">很差</string>
    <string name="appkefu_comment_thanks">多谢您的评价</string>
    <string name="appkefu_comment_request">客服发起满意度评价</string>
    <string name="appkefu_queue_position">你前面还有%1$s人,大约还需要等待%2$s秒</string>
    <string name="appkefu_queue_position_2">你前面还有%1$s人,请耐心等待</string>
    <string name="appkefu_no_agent_online">目前没有客服在线,请留言.客服上线后会在第一时间回复您!</string>
    <string name="appkefu_settings_title">设置</string>
    <string name="appkefu_settings_clearmessage">清空聊天记录</string>
    <string name="appkefu_settings_support">微客服(appkefu.com)技术支持</string>
    <string name="appkefu_settings_clearmessge_asure">确定要清空聊天记录?</string>
    <string name="appkefu_webbrowser_title">网页</string>
    <string name="appkefu_faq_title">常见问题</string>
    <string name="appkefu_ok">确定</string>
    <string name="appkefu_offline">离线</string>
    <string name="appkefu_backkeypressed_toast">再按一次退出</string>
    <string name="appkefu_promotion_title">提示</string>
    <string name="appkefu_close_session">客服已关闭会话</string>
    <string name="appkefu_quit_session">客服已退出会话</string>
    <string name="appkefu_agent_offline">客服暂时离开,请稍后</string>
    <string name="appkefu_create_menu">未在管理后台创建自定义菜单</string>
    <string name="appkefu_close_chat_session_asure">确定要关闭会话?</string>
    <string name="appkefu_request_agent">正在联系客服,请稍后</string>
    <string name="appkefu_goto_faq">查看常见问题</string>
    <string name="appkefu_network_disconnected">网络连接异常,请稍后重试</string>
    <string name="appkefu_timeout">请求超时</string>
    <string name="appkefu_request_again">重新请求客服</string>
    <string name="appkefu_request_success">已接通客服</string>
    <string name="appkefu_webview_loadingprogress">页面加载中，请稍后..</string>
    <string name="appkefu_dialog_rate_title">满意度评价</string>
    <string name="appkefu_dialog_rate_body">为了给您提供更加优质的服务,请您为客服的服务进行评价,谢谢您的合作</string>
    <string name="appkefu_dialog_rate_good">非常满意</string>
    <string name="appkefu_dialog_rate_ok">满意</string>
    <string name="appkefu_dialog_rate_bad">不满意</string>
    <string name="appkefu_robot_rate_is_helpfull">该回答对您有帮助吗?</string>
    <string name="appkefu_robot_rate_thanks">感谢您的支持!</string>
    <string name="appkefu_robot_rate_usefull">有用</string>
    <string name="appkefu_robot_rate_useless">没用</string>
    <string name="appkefu_robot_no_answer_found">很抱歉,客服小秘书没能理解您的问题,您可以选择以下操作:</string>
    <string name="appkefu_robot_founded_answers">为您找到以下相关问题:</string>
    <string name="appkefu_robot_get_default">查看智能应答</string>
    <string name="appkefu_robot_route_human_service">呼叫人工客服</string>
    <string name="appkefu_robot_not_set">暂未设置智能机器人应答</string>
    <string name="appkefu_robot_leave_message">留言</string>
    <string name="appkefu_robot_is_routing_human_service">正在呼叫人工客服</string>
    <string name="appkefu_robot_no_agent_available">抱歉,当前无客服在线</string>
    <string name="appkefu_robot_cannot_send_picture">机器人应答模式下下不能发送图片</string>
    <string name="appkefu_robot_cannot_send_voice">机器人应答模式下下不能发送语音</string>
    <string name="appkefu_no_email_client_found">抱歉,此手机未安装邮箱客户端,无法发送邮件</string>
    <string name="appkefu_product_info_price">￥</string>
    <string name="appkefu_product_info_sendlinkbtn">发送宝贝链接</string>
    <string name="appkefu_imageview_contentdescription" />
    <string name="appkefu_already_rated">已经评价过此次会话</string>
    <string name="appkefu_mobileformat_wrong">手机号码格式错误</string>
    <string name="appkefu_content_null">留言内容不能为空</string>
    <string name="appkefu_leavemsg_title">留言</string>
    <string name="appkefu_leavemsg_success">留言成功</string>
    <string name="appkefu_leavemsg_failed">留言失败</string>
    <string name="boyaa_kefu_picker_dialog_comment_type_title">留言类型</string>
    <string name="boyaa_kefu_picker_dialog_comment_type1">无法登陆</string>
    <string name="boyaa_kefu_picker_dialog_comment_type2">支付问题</string>
    <string name="boyaa_kefu_picker_dialog_comment_type3">故障问题</string>
    <string name="boyaa_kefu_picker_dialog_comment_type4">游戏问题</string>
    <string name="boyaa_kefu_picker_dialog_comment_type5">其他</string>
    <string name="boyaa_kefu_comment_phone_tips">手机号码</string>
    <string name="boyaa_kefu_commemnt_phone_hints">请输入手机号码</string>
    <string name="boyaa_kefu_comment_type_tips">留言类型</string>
    <string name="boyaa_kefu_commemnt_type_hints">请选择留言类型</string>
    <string name="boyaa_kefu_commemnt_content_hints">留言内容</string>
    <string name="boyaa_kefu_comment_submit">提交</string>
    <string name="boyaa_kefu_commemnt_content_callback">回复客服:</string>
    <string name="boyaa_kefu_comment_tips1">我要留言</string>
    <string name="boyaa_kefu_comment_tips2">留言回复</string>
    <string name="boyaa_kefu_expand_blank_tips">暂无任何记录</string>
    <string name="boyaa_kefu_empty_reply">客服人员正在处理中,将在三个工作日内给予答复。</string>
    <string name="boyaa_kefu_complain">我要申诉</string>
    <string name="boyaa_kefu_complain_history">申诉历史</string>
    <string name="boyaa_kefu_next">下一步</string>
    <string name="boyaa_kefu_commit">提交</string>
    <string name="boyaa_kefu_stolen_id">被盗ID</string>
    <string name="boyaa_kefu_stolen_date">被盗时间</string>
    <string name="boyaa_kefu_stolen_amount">被盗金额</string>
    <string name="boyaa_kefu_common_login_ip">请输入登录游戏的常用IP及地区</string>
    <string name="boyaa_kefu_last_amount">请输入最后一次下线时间的游戏币数量</string>
    <string name="boyaa_kefu_first_login_date">请输入第一次加入游戏的时间</string>
    <string name="boyaa_kefu_last_login_date">请输入最后一次登录游戏的时间</string>
    <string name="boyaa_kefu_safe_box_amount">请输入保险箱存款数</string>
    <string name="boyaa_kefu_complain_agreement_title">申诉协议</string>
    <string name="boyaa_kefu_complain_agreement_part1">如果金币找回，您的金币将补还至</string>
    <string name="boyaa_kefu_complain_agreement_part2">，具体找回金额以实际情况为准,还请您确认该账号的安全，如果该账号两星期内再次发生被盗，将不予找回。</string>
    <string name="boyaa_kefu_agree">同意</string>
    <string name="boyaa_kefu_disagree">不同意</string>
    <string name="boyaa_kefu_complain_stolen">盗号申诉</string>
    <string name="boyaa_kefu_number">编号:</string>
    <string name="boyaa_kefu_input_id">请输入需要申诉的ID</string>
    <string name="boyaa_kefu_select_stolen_date">请选择被盗时间</string>
    <string name="boyaa_kefu_input_stolen_ammount">请输入被盗金额</string>
    <string name="boyaa_kefu_input_error">请输入正确的值</string>
    <string name="boyaa_kefu_input_error_phone">请输入正确的手机号码</string>
    <string name="boyaa_kefu_input_error_date">不能超过当前时间</string>
    <string name="boyaa_kefu_contentdescrip_inform">上传举报游戏截图图片</string>
    <string name="boyaa_kefu_picker_inform_submit">提交</string>
    <string name="boyaa_kefu_picker_picture_describe">（举报必须上传游戏相关截图）</string>
    <string name="boyaa_kefu_picker_informcontents_describe">举报内容（在游戏中可点击玩家头像进行举报）</string>
    <string name="boyaa_kefu_picker_inform_type_describle">请选取举报类型</string>
    <string name="boyaa_kefu_picker_inform_type_tips">举报类型</string>
    <string name="boyaa_kefu_picker_inform_id_tips">举报ID</string>
    <string name="boyaa_kefu_picker_inform_id_hints">请输入需要举报的ID</string>
    <string name="boyaa_kefu_inform_card_date">牌局时间</string>
    <string name="boyaa_kefu_inform_select_date">请选择牌局时间</string>
    <string name="boyaa_kefu_imageview_content_description">图片</string>
    <string name="boyaa_kefu_back_dialog_tips">"当您退出此页面时
则表示确认结束此次对话"</string>
    <string name="boyaa_kefu_back_dialog_cancel">取消</string>
    <string name="boyaa_kefu_back_dialog_ok">确认</string>
    <string name="boyaa_kefu_rate_title">满意度评价</string>
    <string name="boyaa_kefu_rate_content_speed">客服响应速度</string>
    <string name="boyaa_kefu_rate_content_attitude">客服服务态度</string>
    <string name="boyaa_kefu_rate_content_feel">产品体验</string>
    <string name="boyaa_kefu_rate_content_tips">您的评价对于改善我们的服务有重大意义</string>
    <string name="boyaa_kefu_inform_number">编号:</string>
    <string name="boyaa_kefu_inform_id">举报ID:</string>
    <string name="boyaa_kefu_inform_type">举报类型:</string>
    <string name="boyaa_kefu_inform_content">举报内容:</string>
    <string name="boyaa_kefu_inform_has_commit">您的举报已提交成功，请耐心等待</string>
    <string name="boyaa_kefu_inform_response">客服回复:</string>
</resources>