<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:boyaaKefu="http://schemas.android.com/apk/res-auto">
    <com.boyaa.customer.service.widget.BoyaaValiditedItemLayout android:id="@id/bvitem_stolen_id" android:layout_width="fill_parent" android:layout_height="wrap_content" boyaaKefu:enabled="true" boyaaKefu:tipText="@string/boyaa_kefu_stolen_id" boyaaKefu:isShowPic="true" boyaaKefu:errorText="@string/boyaa_kefu_input_error" boyaaKefu:editTextHint="@string/boyaa_kefu_input_id" boyaaKefu:indicatorBackgroud="@drawable/boyaa_kefu_input_indicator" boyaaKefu:inputType="number" />
    <com.boyaa.customer.service.widget.BoyaaValiditedItemLayout android:id="@id/bvitem_stolen_date" android:layout_width="fill_parent" android:layout_height="wrap_content" boyaaKefu:enabled="true" boyaaKefu:tipText="@string/boyaa_kefu_stolen_date" boyaaKefu:isShowPic="true" boyaaKefu:errorText="@string/boyaa_kefu_input_error_date" boyaaKefu:editTextHint="@string/boyaa_kefu_select_stolen_date" boyaaKefu:indicatorBackgroud="@drawable/appkefu_disclosure_arrow_normal" boyaaKefu:editTextId="@id/et_stolen_date" boyaaKefu:inputType="none" />
    <com.boyaa.customer.service.widget.BoyaaValiditedItemLayout android:id="@id/bvitem_stolen_amount" android:layout_width="fill_parent" android:layout_height="wrap_content" boyaaKefu:enabled="true" boyaaKefu:tipText="@string/boyaa_kefu_stolen_amount" boyaaKefu:isShowPic="true" boyaaKefu:errorText="@string/boyaa_kefu_input_error" boyaaKefu:editTextHint="@string/boyaa_kefu_input_stolen_ammount" boyaaKefu:indicatorBackgroud="@drawable/boyaa_kefu_input_indicator" boyaaKefu:inputType="number" />
</LinearLayout>