<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="80dp"
        android:textColor="@color/appkefu_black"
        android:text="@string/boyaa_kefu_complain_agreement_title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_complain_agreements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="@color/appkefu_black"
        android:padding="20dp"
        android:text="@string/boyaa_kefu_complain_agreement_part2"
        android:textSize="15sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/appkefu_black"
            android:layout_margin="5dp"
            android:text="@string/boyaa_kefu_agree" />

        <RadioButton
            android:id="@+id/rb_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/appkefu_black"
            android:layout_margin="5dp"
            android:text="@string/boyaa_kefu_disagree" />
    </RadioGroup>

</LinearLayout>
