<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="120.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip">
        <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center|left|top" android:id="@id/boyaa_kefu_callback_content" android:background="@drawable/boyaa_kefu_common_callback_shape" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/boyaa_kefu_commemnt_content_callback" android:minLines="4" android:ems="10" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip">
        <Button android:id="@id/boyaa_kefu_callback_cancel" android:background="@drawable/appkefu_inputbar_recordvoicebtn" android:layout_width="120.0dip" android:layout_height="50.0dip" android:text="@string/boyaa_kefu_back_dialog_cancel" />
        <Button android:id="@id/boyaa_kefu_callback_comment" android:background="@drawable/boyaa_kefu_submit_click" android:layout_width="120.0dip" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/boyaa_kefu_back_dialog_ok" />
    </LinearLayout>
</LinearLayout>